# lingo-db-parser

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  overview.md
include/parser/: driver.h  node_factory.h  parsed_expression.h  query_node.h  tableref.h
include/parser/ast/: ast.h
include/parser/ast/nodes/: common.h  expr.h  nodes.h  select.h
include/parser/parsed_expression/: columnref_expression.h  comparison_expression.h  conjunction_expression.h  constant_expression.h  list.h  star_expression.h
include/parser/query_node/: select_node.h
include/parser/tableref/: basetableref.h  joinref.h  list.h  tabledescription.h
sources/: simple_select.sql
src/: CMakeLists.txt  main.cpp
src/parser/: CMakeLists.txt  driver.cpp  lexer.l  node_factory.cpp  parsed_expression.cpp  parser.y  query_node.cpp  tableref.cpp
src/parser/ast/nodes/: expr.cpp
src/parser/parsed_expression/: columnref_expression.cpp  comparison_expression.cpp  conjunction_expression.cpp  constant_expression.cpp  star_expression.cpp
src/parser/query_node/: select_node.cpp
src/parser/tableref/: basetableref.cpp  joinref.cpp
